main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,7 +29,7 @@ $theme_palettes: (
     lightest:      #f7f6f5,
     lighter:       #f0efed,
     light:         #d8d6d1,
-    medium:        #fffffe,
+    medium:        #ffffff,
     dark:          #38352f,
     darker:        #27241d,
     active:        #fbbf24,
