main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -31,7 +31,7 @@ $theme_palettes: (
     light:         #d8d6d1,
     medium:        #ffffff,
     dark:          #38352f,
-    darker:        #27241d,
+    darker:        #fcfbfa,
     active:        #fbbf24,
     active_light:  #fcd34d,
     active_medium: #f7b305,
