main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,7 +30,7 @@ $theme_palettes: (
     lighter:       #f0efed,
     light:         #d8d6d1,
     medium:        #ffffff,
-    dark:          #38352f,
+    dark:          #faf9f8,
     darker:        #fcfbfa,
     active:        #fbbf24,
     active_light:  #fcd34d,
