main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,9 +29,9 @@ $theme_palettes: (
     lightest:      #f7f6f5,
     lighter:       #f0efed,
     light:         #d8d6d1,
-    medium:        #ffffff,
-    dark:          #faf9f8,
-    darker:        #fcfbfa,
+    medium:        #625d52,
+    dark:          #38352f,
+    darker:        #27241d,
     active:        #fbbf24,
     active_light:  #fcd34d,
     active_medium: #f7b305,
