main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 // Default palette
 $color_default:       #fff;
 $color_lightest:      #f7fafa;
-$color_lighter:       #f0f5f6;
+$color_lighter:       #378392;
 $color_light:         #d9dfe0;
 $color_medium:        #8fa0a1;
 $color_dark:          #f4f8f8;
