main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 $color_default:       #fff;
 $color_lightest:      #f7fafa;
 $color_lighter:       #f0f5f6;
-$color_light:         #076c7e;
+$color_light:         #d9dfe0;
 $color_medium:        #8fa0a1;
 $color_dark:          #f4f8f8;
 $color_darker:        #f6fbfc;
