main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,7 +26,7 @@ $theme_palettes: (
     active_dark:   #14919b
   ),
   yellow: (
-    lightest:      #a36a31,
+    lightest:      #f7f6f5,
     lighter:       #f0efed,
     light:         #d8d6d1,
     medium:        #625d52,
