--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,7 +27,7 @@ $theme_palettes: (
   ),
   yellow: (
     lightest:      #f7f6f5,
-    lighter:       #f0efed,
+    lighter:       #5f533b,
     light:         #d8d6d1,
     medium:        #625d52,
     dark:          #38352f,
