--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,7 +28,7 @@ $theme_palettes: (
   yellow: (
     lightest:      #f7f6f5,
     lighter:       #f0efed,
-    light:         #554827,
+    light:         #d8d6d1,
     medium:        #625d52,
     dark:          #38352f,
     darker:        #27241d,
