--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,7 @@ $color_lightest:      #f7fafa;
 $color_lighter:       #f0f5f6;
 $color_light:         #d9dfe0;
 $color_medium:        #8fa0a1;
-$color_dark:          #1ab8db;
+$color_dark:          #db671a;
 $color_darker:        #f6fbfc;
 $color_active:        #88dd9b;
 $color_active_light:  #c0fdb6;
