--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
 // Default palette
 $color_default:       #fff;
-$color_lightest:      #f7fafa;
+$color_lightest:      #159797;
 $color_lighter:       #f0f5f6;
 $color_light:         #d9dfe0;
 $color_medium:        #8fa0a1;
