--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@ $color_lighter:       #f0f5f6;
 $color_light:         #d9dfe0;
 $color_medium:        #8fa0a1;
 $color_dark:          #cacac7;
-$color_darker:        #8fa0a1;
+$color_darker:        #cacac7;
 $color_active:        #88dd9b;
 $color_active_light:  #c0fdb6;
 $color_active_medium: #5c9174;
