--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,9 +3,9 @@ $color_default:       #fff;
 $color_lightest:      #f7fafa;
 $color_lighter:       #f0f5f6;
 $color_light:         #d9dfe0;
-$color_medium:        #cacac7;
+$color_medium:        #8fa0a1;
 $color_dark:          #cacac7;
-$color_darker:        #cacac7;
+$color_darker:        #8fa0a1;
 $color_active:        #88dd9b;
 $color_active_light:  #c0fdb6;
 $color_active_medium: #5c9174;
