--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,7 +30,7 @@ $theme_palettes: (
     lighter:       #f0efed,
     light:         #d8d6d1,
     medium:        #8fa0a1,
-    dark:          #8fa0a1f,
+    dark:          #38352f,
     darker:        #27241d,
     active:        #fbbf24,
     active_light:  #fcd34d,
