--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@ $color_darker:        #8fa0a1;
 $color_active:        #88dd9b;
 $color_active_light:  #c0fdb6;
 $color_active_medium: #5c9174;
-$color_active_dark:   #547567;
+$color_active_dark:   ##fff;
 
 // Alternative palettes
 $theme_palettes: (
