--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -35,7 +35,7 @@ main.content {
 
     picture {
       max-width: 500px;
-      max-height: 75    0px;
+      max-height: 750px;
       object-fit: cover;
       @include smaller-than-tablet {
         max-height: 400px;
