main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
 // Default palette
-$color_default:       #fbbf24
+$color_default:       #fbbf24;
 $color_lightest:      #f7fafa;
 $color_lighter:       #f0f5f6;
 $color_light:         #d9dfe0;
