--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -30,7 +30,7 @@ main.content {
     }
 
     @include smaller-than-tablet {
-      flex-direction: column !important;
+      flex-direction: column-reverse !important;
     }
 
     picture {
