_page.scss: changed

--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -36,7 +36,7 @@ main.content {
     picture {
       max-width: 500px;
       max-height: 500px;
-      object-fit: cover;
+      object-fit: contain;
       @include smaller-than-tablet {
         max-height: 400px;
         max-height: 400px;
