_page.scss: changed

--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -34,9 +34,9 @@ main.content {
     }
 
     picture {
-      max-width: 1200px;
-      max-height: 700px;
-      object-fit: contain;
+      max-width: 500px;
+      max-height: 500px;
+      object-fit: cover;
       @include smaller-than-tablet {
         max-height: 400px;
         max-height: 400px;
