--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -37,7 +37,7 @@ main.content {
       max-width: 500px;
       max-height: 500px;
       object-fit: cover;
-      position;
+      position:;
       @include smaller-than-tablet {
         max-height: 400px;
         max-height: 400px;
