_page.scss: changed

--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -76,7 +76,7 @@ main.content {
 
   &__section-title {
     font-family: $font_family_primary;
-    font-size: 70px;
+    font-size: px;
     margin-bottom: $spacing--unit*3;
     color: $color_darker;
     margin-top: 75px;
