_page.scss: changed

--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -106,7 +106,7 @@ main.content {
 }
 
 @each $palette in map-keys($theme_palettes) {
-  .palette-#{$palette} {
+  .palette-#{$palette} {;
     .gray-background,
     .page {
       background-color: map-deep-get($theme-palettes, $palette, "lightest");
