--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -17,7 +17,7 @@ main.content {
   padding-bottom: 150px;
 
   .header-section__header {
-    padding-bottom:100 0px;
+    padding-bottom: 0px;
   }
 
   &__section {
