--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -21,7 +21,7 @@ main.content {
   }
 
   &__section {
-    display: flex;
+    display;
     max-width: 1000px;
     margin-bottom: 100px;
     overflow: hidden;
