_page.scss: changed

--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -21,7 +21,7 @@ main.content {
   }
 
   &__section {
-    display: contents;;
+    display: contents;
     max-width: 1000px;
     margin-bottom: 100px;
     overflow: hidden;
