--- a/src/sass/imports/_page.scss
+++ b/src/sass/imports/_page.scss
@@ -26,7 +26,7 @@ main.content {
     margin-bottom: 100px;
     overflow: hidden;
     &:nth-child(odd) {
-      flex-direction: row-reverse;
+      flex-direction: row;
     }
 
     @include smaller-than-tablet {
