--- a/src/sass/imports/_static_header.scss
+++ b/src/sass/imports/_static_header.scss
@@ -10,7 +10,7 @@
     align-items: center;
     background-color: $color_default;
     background-size: auto 150%;
-    background-position: center;
+    background-position: right;
     overflow-y: visible;
     margin-top: -0px;
     margin-bottom: -100px;
