--- a/src/sass/imports/_static_header.scss
+++ b/src/sass/imports/_static_header.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     background-color: $color_default;
-    background-size: 10 10%;
+    background-size: 10% 10%;
     background-position: calc(50% + 400px) 50%;
     overflow-y: visible;
     margin-top: -0px;
