--- a/src/sass/imports/_mixins.scss
+++ b/src/sass/imports/_mixins.scss
@@ -30,7 +30,7 @@
 @mixin bigger-than-max-width { @media (min-width: $spacing--max-width) { @content; } }
 
 //$mobile: 375px;
-
+//
 $mobile: 375px;
 $tablet: 768px;
 $desktop: 1440px;
